# Wanderer

./: .gitignore  CMakeLists.txt  plan.md
assets/shader/fragment/: fragment.frag
assets/shader/vertex/: vertex.vert
include/: pch.h
include/core/: Window.h
include/ecs/: Component.h  ComponentMask.h  Entity.h  System.h  World.h
include/game/: Game.h
include/glad/: glad.h
include/graphics/: Mesh.h  Pipeline.h  Shader.h
src/: glad.c  main.cpp
src/core/: Window.cpp
src/ecs/: World.cpp
src/game/: Game.cpp
src/graphics/: Mesh.cpp  Pipeline.cpp  Shader.cpp
